# oxigraph-wasm

./: .gitignore  Cargo.toml  README.md  build.sh  oxigraph_wasm.h
src/: lib.rs
