[package]
name = "oxigraph-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM library with raw C bindings for Oxigraph RDF store"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
oxigraph = "0.5.0"
oxsdatatypes = "0.2"
getrandom = "0.3"

[dependencies.web-sys]
version = "0.3"
optional = true

[profile.release]
opt-level = "s"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["oxigraph-wasm"]
oxigraph-wasm = []